# tas_policy_cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: pre-commit.yml  tests.yml
tas-policy-cli/src/: args.rs  convert.rs
tas-policy-cli/src/commands/: create.rs  list.rs  mod.rs  signing.rs  update.rs
tas-policy-lib/src/: client.rs  lib.rs
tas-policy-lib/src/policy/: mod.rs  sev.rs  signed.rs  tdx.rs  types.rs
tas-policy-lib/src/signing/: key_loader.rs  signer.rs
tas_policy_cli/: Cargo.toml
tas_policy_cli/src/: args.rs  interactive.rs  main.rs  output.rs
tas_policy_cli/src/commands/: create.rs  delete.rs  get.rs  healthcheck.rs
tas_policy_cli/tests/: delete_cmd.rs  healthcheck_cmd.rs  verbose_flag.rs
tas_policy_lib/: Cargo.toml
tas_policy_lib/src/: error.rs  lib.rs
tas_policy_lib/src/config/: mod.rs  types.rs
tas_policy_lib/src/policy/: signed.rs  types.rs  validation.rs
tas_policy_lib/src/signing/: mod.rs  signer.rs
