[workspace]
members = ["tas_policy_lib", "tas_policy_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/TEE-Attestation/tas_policy_cli"

[workspace.dependencies]
# Shared dependencies with versions pinned at workspace level
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
strip = true
codegen-units = 1
