[package]
name = "tas-policy"
description = "TAS Policy Management CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tas-policy"
path = "src/main.rs"

[dependencies]
tas_policy_lib = { path = "../tas_policy_lib" }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
serde = { workspace = true }
serde_json = { workspace = true }
console = "0.15"
dialoguer = "0.11"
anyhow = "1"
log = { workspace = true }
env_logger = { workspace = true }
zeroize = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
