[package]
name = "tas_policy_lib"
description = "TAS Policy Management Library - create, sign, and manage attestation policies"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["rustls"]
rustls = ["ureq/rustls"]
native-tls = ["ureq/native-tls"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = "0.2"
toml = "0.8"
ureq = { version = "3", default-features = false, features = ["json"] }
rsa = "0.9"
sha2 = "0.10"
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
base64 = "0.21"
pem = "3"
aes = "0.8"
cbc = "0.1"
md-5 = "0.10"
thiserror = { workspace = true }
log = { workspace = true }
zeroize = "1"

[dev-dependencies]
